@@ -90,6 +90,7 @@ require "braintree/paypal_account_gateway"
 require "braintree/plan"
 require "braintree/plan_gateway"
 require "braintree/risk_data"
+require "braintree/facilitated_details"
 require "braintree/facilitator_details"
 require "braintree/three_d_secure_info"
 require "braintree/settlement_batch_summary"
