@@ -4713,6 +4713,9 @@ describe Braintree::Transaction do
         :payment_method_nonce => grant_result.payment_method_nonce.nonce,
         :amount => Braintree::Test::TransactionAmounts::Authorize
       )
+      result.transaction.facilitated_details.merchant_id.should == "integration_merchant_id"
+      result.transaction.facilitated_details.merchant_name.should == "14ladders"
+      result.transaction.facilitated_details.payment_method_nonce.should == grant_result.payment_method_nonce.nonce
       result.transaction.facilitator_details.should_not == nil
       result.transaction.facilitator_details.oauth_application_client_id.should == "client_id$#{Braintree::Configuration.environment}$integration_client_id"
       result.transaction.facilitator_details.oauth_application_name.should == "PseudoShop"
@@ -4728,9 +4731,7 @@ describe Braintree::Transaction do
       )
 
       result.transaction.billing_details.postal_code == "95131"
-   end
-
-
+    end
 
     it "allows transactions to be created with a shared payment method, customer, billing and shipping addresses" do
       result = @granting_gateway.transaction.sale(
@@ -4745,11 +4746,14 @@ describe Braintree::Transaction do
       result.transaction.billing_details.first_name.should == @address.first_name
     end
 
-    it "oauth app details are returned on transaction created via a shared_payment_method_token" do
+    it "facilitated details are returned on transaction created via a shared_payment_method_token" do
       result = @granting_gateway.transaction.sale(
         :shared_payment_method_token => @credit_card.token,
         :amount => Braintree::Test::TransactionAmounts::Authorize
       )
+      result.transaction.facilitated_details.merchant_id.should == "integration_merchant_id"
+      result.transaction.facilitated_details.merchant_name.should == "14ladders"
+      result.transaction.facilitated_details.payment_method_nonce.should == nil
       result.transaction.facilitator_details.should_not == nil
       result.transaction.facilitator_details.oauth_application_client_id.should == "client_id$#{Braintree::Configuration.environment}$integration_client_id"
       result.transaction.facilitator_details.oauth_application_name.should == "PseudoShop"
