@@ -10,6 +10,7 @@
 * Add Braintree::Dispute.remove_evidence method
 * Coinbase is no longer a supported payment method. `PaymentMethodNoLongerSupported` will be returned for Coinbase operations.
 * Add Braintree::ApplePay for web domain registration
+* Add facilitated details to Transaction if present
 
 == 2.76.0
 * Pass configured gateway to Merchant#_new instead of using global gateway (thanks @cwalsh!)
